--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -143,8 +143,8 @@ jobs:
     strategy:
       matrix:
         go: [ 1.22 ]
-    runs-on: [self-hosted, Linux, X64]
-    needs: [build_public, build_common]
+    runs-on: ubuntu-latest
+    needs: [build_public]
     steps:
 
       - env:
@@ -177,11 +177,6 @@ jobs:
       - name: Output artifact ID
         run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
 
-      - uses: actions/download-artifact@v4
-        with:
-          name: common_build
-          path: ./server-linux-x86
-
 #      - name: trying to build docker image
 #        run: make docker_image_linux_x86
 
@@ -190,8 +185,8 @@ jobs:
     strategy:
       matrix:
         go: [ 1.22 ]
-    runs-on: [self-hosted, Linux, X64]
-    needs: [build_public, build_common]
+    runs-on: ubuntu-latest
+    needs: [build_public]
     steps:
 
       - env:
@@ -224,11 +219,6 @@ jobs:
       - name: Output artifact ID
         run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
 
-      - uses: actions/download-artifact@v4
-        with:
-          name: common_build
-          path: ./server-linux-amd64
-
 #      - name: trying to build docker image
 #        run: make docker_image_linux_amd64
 
@@ -237,8 +227,8 @@ jobs:
     strategy:
       matrix:
         go: [ 1.22 ]
-    runs-on: [self-hosted, Linux, X64]
-    needs: [build_public, build_common]
+    runs-on: ubuntu-latest
+    needs: [build_public]
     steps:
 
       - env:
@@ -276,8 +266,8 @@ jobs:
     strategy:
       matrix:
         go: [ 1.22 ]
-    runs-on: [self-hosted, Linux, X64]
-    needs: [build_public, build_common]
+    runs-on: ubuntu-latest
+    needs: [build_public]
     steps:
 
       - env:
@@ -310,11 +300,6 @@ jobs:
       - name: Output artifact ID
         run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
 
-      - uses: actions/download-artifact@v4
-        with:
-          name: common_build
-          path: ./server-linux-arm-7
-
 #      - name: trying to build docker image
 #        run: make docker_image_linux_armv7l
 
@@ -323,8 +308,8 @@ jobs:
     strategy:
       matrix:
         go: [ 1.22 ]
-    runs-on: [self-hosted, Linux, X64]
-    needs: [build_public, build_common]
+    runs-on: ubuntu-latest
+    needs: [build_public]
     steps:
 
       - env:
@@ -357,11 +342,6 @@ jobs:
       - name: Output artifact ID
         run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
 
-      - uses: actions/download-artifact@v4
-        with:
-          name: common_build
-          path: ./server-linux-arm64
-
 #      - name: trying to build docker image
 #        run: make docker_image_linux_arm64
 
@@ -370,7 +350,7 @@ jobs:
     strategy:
       matrix:
         go: [ 1.22 ]
-    runs-on: [self-hosted, Linux, X64]
+    runs-on: ubuntu-latest
     needs: [build_public]
     steps:
 
@@ -409,7 +389,7 @@ jobs:
     strategy:
       matrix:
         go: [ 1.22 ]
-    runs-on: [self-hosted, Linux, X64]
+    runs-on: ubuntu-latest
     needs: [build_public]
     steps:
 
@@ -443,10 +423,23 @@ jobs:
       - name: Output artifact ID
         run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
 
-#  docker_image_upload:
-#    name: Upload docker images
-#    runs-on: [self-hosted, Linux, X64]
-#    needs: [build_linux_arm64, build_linux_amd64, build_linux_arm7, build_linux_x86]
-#    steps:
-#      - name: trying to upload docker image
-#        run: make docker_image_upload
+  docker_image_test:
+    name: Upload docker images
+    runs-on: ubuntu-latest
+    needs: [build_public]
+    steps:
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        env:
+          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: public_build
+          path: ./build
+
+      - name: trying to test docker image
+        run: make build
