--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -177,9 +177,6 @@ jobs:
       - name: Output artifact ID
         run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
 
-#      - name: trying to build docker image
-#        run: make docker_image_linux_x86
-
   build_linux_amd64:
     name: Build linux amd64
     strategy:
@@ -218,9 +215,6 @@ jobs:
 
       - name: Output artifact ID
         run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
-
-#      - name: trying to build docker image
-#        run: make docker_image_linux_amd64
 
   build_linux_arm6:
     name: Build linux arm6
@@ -300,9 +294,6 @@ jobs:
       - name: Output artifact ID
         run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
 
-#      - name: trying to build docker image
-#        run: make docker_image_linux_armv7l
-
   build_linux_arm64:
     name: Build linux arm64
     strategy:
@@ -341,9 +332,6 @@ jobs:
 
       - name: Output artifact ID
         run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
-
-#      - name: trying to build docker image
-#        run: make docker_image_linux_arm64
 
   build_windows_amd64:
     name: Build windows amd64
@@ -424,7 +412,7 @@ jobs:
         run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
 
   docker_image_test:
-    name: Upload docker images
+    name: Test docker images
     runs-on: ubuntu-latest
     needs: [build_public]
     steps:
