--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           name: public_build
           path: ./build
+          retention-days: 1
 
       - name: Output artifact ID
         run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
@@ -63,6 +64,7 @@ jobs:
         with:
           name: common_build
           path: ./tmp/common
+          retention-days: 1
 
       - name: Output artifact ID
         run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
@@ -74,11 +76,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  build_linux_x86:
-    name: Build linux x86
-    strategy:
-      matrix:
-        go: [ 1.23 ]
+  build_artefacts:
+    name: Build artefacts
     runs-on: ubuntu-latest
     needs: [ build_public ]
     steps:
@@ -104,285 +103,56 @@ jobs:
           echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
           make get_deps
 
-      - name: trying to build
-        id: build-linux-x86
-        run: make build_linux_x86
-
-      - name: upload server linux x86
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ./server-linux-x86.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  build_linux_amd64:
-    name: Build linux amd64
-    strategy:
-      matrix:
-        go: [ 1.23 ]
-    runs-on: ubuntu-latest
-    needs: [ build_public ]
-    steps:
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-        env:
-          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
-
-      - env:
-          OUTPUT1: ${{needs.build_public.outputs.output1}}
-        run: echo "Artifact ID from previous job is $OUTPUT1"
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: public_build
-          path: ./build
-
-      - name: Go mod tidy
-        run: |
-          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
-          make get_deps
-
-      - name: trying to build
-        id: build-linux-amd64
-        run: make build_linux_amd64
+      - name: trying to build artefacts
+        id: build-artefacts
+        run: make build_artefacts
 
       - name: upload server linux amd64
         uses: softprops/action-gh-release@v1
         with:
-          files: ./server-linux-amd64.tar.gz
+          files: ./dist/linux_amd64
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  build_linux_armv5:
-    name: Build linux arm5
-    strategy:
-      matrix:
-        go: [ 1.23 ]
-    runs-on: ubuntu-latest
-    needs: [ build_public ]
-    steps:
-
-      - env:
-          OUTPUT1: ${{needs.build_public.outputs.output1}}
-        run: echo "Artifact ID from previous job is $OUTPUT1"
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: public_build
-          path: ./build
-
-      - name: Go mod tidy
-        run: |
-          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
-          make get_deps
-
-      - name: trying to build
-        id: build-linux-arm-5
-        run: make build_linux_armv5
-
-      - name: upload server linux armv5
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ./server-linux-arm-5.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  build_linux_arm6:
-    name: Build linux arm6
-    strategy:
-      matrix:
-        go: [ 1.23 ]
-    runs-on: ubuntu-latest
-    needs: [ build_public ]
-    steps:
-
-      - env:
-          OUTPUT1: ${{needs.build_public.outputs.output1}}
-        run: echo "Artifact ID from previous job is $OUTPUT1"
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: public_build
-          path: ./build
-
-      - name: Go mod tidy
-        run: |
-          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
-          make get_deps
-
-      - name: trying to build
-        id: build-linux-arm-6
-        run: make build_linux_armv6
-
-      - name: upload server linux armv6
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ./server-linux-arm-6.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  build_linux_arm7:
-    name: Build linux arm7
-    strategy:
-      matrix:
-        go: [ 1.23 ]
-    runs-on: ubuntu-latest
-    needs: [ build_public ]
-    steps:
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-        env:
-          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
-
-      - env:
-          OUTPUT1: ${{needs.build_public.outputs.output1}}
-        run: echo "Artifact ID from previous job is $OUTPUT1"
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: public_build
-          path: ./build
-
-      - name: Go mod tidy
-        run: |
-          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
-          make get_deps
-
-      - name: trying to build
-        id: build-linux-armv7l
-        run: make build_linux_armv7l
-
-      - name: upload server linux armv7
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ./server-linux-arm-7.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  build_linux_arm64:
-    name: Build linux arm64
-    strategy:
-      matrix:
-        go: [ 1.23 ]
-    runs-on: ubuntu-latest
-    needs: [ build_public ]
-    steps:
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-        env:
-          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
-
-      - env:
-          OUTPUT1: ${{needs.build_public.outputs.output1}}
-        run: echo "Artifact ID from previous job is $OUTPUT1"
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: public_build
-          path: ./build
-
-      - name: Go mod tidy
-        run: |
-          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
-          make get_deps
-
-      - name: trying to build
-        id: build-linux-arm64
-        run: make build_linux_arm64
 
       - name: upload server linux arm64
         uses: softprops/action-gh-release@v1
         with:
-          files: ./server-linux-arm64.tar.gz
+          files: ./dist/linux_arm64
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  build_windows_amd64:
-    name: Build windows amd64
-    strategy:
-      matrix:
-        go: [ 1.23 ]
-    runs-on: ubuntu-latest
-    needs: [ build_public ]
-    steps:
-
-      - env:
-          OUTPUT1: ${{needs.build_public.outputs.output1}}
-        run: echo "Artifact ID from previous job is $OUTPUT1"
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: public_build
-          path: ./build
-
-      - name: Go mod tidy
-        run: |
-          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
-          make get_deps
-
-      - name: trying to build
-        id: build-windows-amd64
-        run: make build_windows_amd64
-
-      - name: upload server linux arm64
+      - name: upload server linux arm v6
         uses: softprops/action-gh-release@v1
         with:
-          files: ./server-windows-amd64.tar.gz
+          files: ./dist/linux_arm_v6
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  build_windows_x86:
-    name: Build windows x86
-    strategy:
-      matrix:
-        go: [ 1.23 ]
-    runs-on: ubuntu-latest
-    needs: [ build_public ]
-    steps:
-
-      - env:
-          OUTPUT1: ${{needs.build_public.outputs.output1}}
-        run: echo "Artifact ID from previous job is $OUTPUT1"
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: public_build
-          path: ./build
-
-      - name: Go mod tidy
-        run: |
-          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
-          make get_deps
-
-      - name: trying to build
-        id: build-windows-x86
-        run: make build_windows_x86
-
-      - name: upload server linux 386
+      - name: upload server linux arm v7
         uses: softprops/action-gh-release@v1
         with:
-          files: ./server-windows-x86.tar.gz
+          files: ./dist/linux_arm_v7
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: upload server linux ppc64le
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ./dist/linux_ppc64le
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: upload server linux riscv64
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ./dist/linux_riscv64
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: upload server linux s390x
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ./dist/linux_s390x
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
