--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,6 +43,7 @@ jobs:
         with:
           name: public_build
           path: ./build
+          retention-days: 1
 
       - name: Output artifact ID
         run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
@@ -65,6 +66,7 @@ jobs:
         with:
           name: common_build
           path: ./tmp/common
+          retention-days: 1
 
       - name: Output artifact ID
         run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
@@ -138,11 +140,8 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-  build_linux_x86:
-    name: Build linux x86
-    strategy:
-      matrix:
-        go: [ 1.23 ]
+  build_artefacts:
+    name: Build artefacts
     runs-on: ubuntu-latest
     needs: [ build_public ]
     steps:
@@ -159,257 +158,9 @@ jobs:
           name: public_build
           path: ./build
 
-      - name: Go mod tidy
-        run: |
-          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
-          make get_deps
-
-      - name: trying to build
-        id: build-linux-x86
-        run: make build_linux_x86
-
-      - uses: actions/upload-artifact@v4
-        id: artifact-upload-step
-        with:
-          name: linux_x86
-          path: ./server-linux-x86
-
-      - name: Output artifact ID
-        run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
-
-  build_linux_amd64:
-    name: Build linux amd64
-    strategy:
-      matrix:
-        go: [ 1.23 ]
-    runs-on: ubuntu-latest
-    needs: [ build_public ]
-    steps:
-
-      - env:
-          OUTPUT1: ${{needs.build_public.outputs.output1}}
-        run: echo "Artifact ID from previous job is $OUTPUT1"
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: public_build
-          path: ./build
-
-      - name: Go mod tidy
-        run: |
-          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
-          make get_deps
-
-      - name: trying to build
-        id: build-linux-amd64
-        run: make build_linux_amd64
-
-      - uses: actions/upload-artifact@v4
-        id: artifact-upload-step
-        with:
-          name: linux_amd64
-          path: ./server-linux-amd64
-
-      - name: Output artifact ID
-        run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
-
-  build_linux_arm6:
-    name: Build linux arm6
-    strategy:
-      matrix:
-        go: [ 1.23 ]
-    runs-on: ubuntu-latest
-    needs: [ build_public ]
-    steps:
-
-      - env:
-          OUTPUT1: ${{needs.build_public.outputs.output1}}
-        run: echo "Artifact ID from previous job is $OUTPUT1"
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: public_build
-          path: ./build
-
-      - name: Go mod tidy
-        run: |
-          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
-          make get_deps
-
-      - name: trying to build
-        id: build-linux-arm-6
-        run: make build_linux_armv6
-
-      - uses: actions/upload-artifact@v4
-        id: artifact-upload-step
-        with:
-          name: linux_arm6
-          path: ./server-linux-arm-6
-
-      - name: Output artifact ID
-        run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
-
-  build_linux_arm7:
-    name: Build linux arm7
-    strategy:
-      matrix:
-        go: [ 1.23 ]
-    runs-on: ubuntu-latest
-    needs: [ build_public ]
-    steps:
-
-      - env:
-          OUTPUT1: ${{needs.build_public.outputs.output1}}
-        run: echo "Artifact ID from previous job is $OUTPUT1"
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: public_build
-          path: ./build
-
-      - name: Go mod tidy
-        run: |
-          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
-          make get_deps
-
-      - name: trying to build
-        id: build-linux-armv7l
-        run: make build_linux_armv7l
-
-      - uses: actions/upload-artifact@v4
-        id: artifact-upload-step
-        with:
-          name: linux_arm7
-          path: ./server-linux-arm-7
-
-      - name: Output artifact ID
-        run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
-
-  build_linux_arm64:
-    name: Build linux arm64
-    strategy:
-      matrix:
-        go: [ 1.23 ]
-    runs-on: ubuntu-latest
-    needs: [ build_public ]
-    steps:
-
-      - env:
-          OUTPUT1: ${{needs.build_public.outputs.output1}}
-        run: echo "Artifact ID from previous job is $OUTPUT1"
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: public_build
-          path: ./build
-
-      - name: Go mod tidy
-        run: |
-          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
-          make get_deps
-
-      - name: trying to build
-        id: build-linux-arm64
-        run: make build_linux_arm64
-
-      - uses: actions/upload-artifact@v4
-        id: artifact-upload-step
-        with:
-          name: linux_arm64
-          path: ./server-linux-arm64
-
-      - name: Output artifact ID
-        run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
-
-  build_windows_amd64:
-    name: Build windows amd64
-    strategy:
-      matrix:
-        go: [ 1.23 ]
-    runs-on: ubuntu-latest
-    needs: [ build_public ]
-    steps:
-
-      - env:
-          OUTPUT1: ${{needs.build_public.outputs.output1}}
-        run: echo "Artifact ID from previous job is $OUTPUT1"
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: public_build
-          path: ./build
-
-      - name: Go mod tidy
-        run: |
-          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
-          make get_deps
-
-      - name: trying to build
-        id: build-windows-amd64
-        run: make build_windows_amd64
-
-      - uses: actions/upload-artifact@v4
-        id: artifact-upload-step
-        with:
-          name: windows_amd64
-          path: ./server-windows-amd64
-
-      - name: Output artifact ID
-        run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
-
-  build_windows_x86:
-    name: Build windows x86
-    strategy:
-      matrix:
-        go: [ 1.23 ]
-    runs-on: ubuntu-latest
-    needs: [ build_public ]
-    steps:
-
-      - env:
-          OUTPUT1: ${{needs.build_public.outputs.output1}}
-        run: echo "Artifact ID from previous job is $OUTPUT1"
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: public_build
-          path: ./build
-
-      - name: Go mod tidy
-        run: |
-          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
-          make get_deps
-
-      - name: trying to build
-        id: build-windows-x86
-        run: make build_windows_x86
-
-      - uses: actions/upload-artifact@v4
-        id: artifact-upload-step
-        with:
-          name: windows_x86
-          path: ./server-windows-x86
-
-      - name: Output artifact ID
-        run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
+      - name: trying to build artefacts
+        id: build-artefacts
+        run: make build_artefacts
 
   docker_image_test:
     name: Test docker images
