--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,135 +15,160 @@ env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
 
 jobs:
-  build_public:
-    name: Build public
-    strategy:
-      matrix:
-        node: [ 16 ]
+#  build_public:
+#    name: Build public
+#    strategy:
+#      matrix:
+#        node: [ 16 ]
+#    runs-on: ubuntu-latest
+#    outputs:
+#      output1: ${{ steps.artifact-upload-step.outputs.artifact-id }}
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#
+#      - name: Install Node ${{ matrix.node }}
+#        uses: actions/setup-node@v2
+#        with:
+#          node-version: ${{ matrix.node }}
+#
+#      - name: Build public
+#        id: build-public
+#        env:
+#          NODE_OPTIONS: "--max_old_space_size=4096"
+#        run: make build_public
+#
+#      - uses: actions/upload-artifact@v4
+#        id: artifact-upload-step
+#        with:
+#          name: public_build
+#          path: ./build
+#          retention-days: 1
+#
+#      - name: Output artifact ID
+#        run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
+
+#  build_common:
+#    name: Build common
+#    runs-on: ubuntu-latest
+#    outputs:
+#      output1: ${{ steps.artifact-upload-step.outputs.artifact-id }}
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#
+#      - name: Build common
+#        id: build-common
+#        run: make build_common_structure
+#
+#      - uses: actions/upload-artifact@v4
+#        id: artifact-upload-step
+#        with:
+#          name: common_build
+#          path: ./tmp/common
+#          retention-days: 1
+#
+#      - name: Output artifact ID
+#        run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
+
+#  run_tests:
+#    name: Run linux test
+#    strategy:
+#      matrix:
+#        go: [ 1.23 ]
+#    runs-on: ubuntu-latest
+#    needs: [ build_public ]
+#
+#    services:
+#      postgres:
+#        image: postgis/postgis:11-3.3
+#        env:
+#          POSTGRES_DB: postgres
+#          POSTGRES_PASSWORD: postgres
+#          POSTGRES_USER: postgres
+#        options: >-
+#          --health-cmd pg_isready
+#          --health-interval 10s
+#          --health-timeout 5s
+#          --health-retries 5
+#        ports:
+#          - 5432:5432
+#
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#
+#      - uses: actions/download-artifact@v4
+#        with:
+#          name: public_build
+#          path: ./build
+#
+#      - name: Install PostgreSQL client
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install --yes postgresql-client
+#          sudo apt-get -y install libpq-dev
+#
+#      - name: set up postgres
+#        run: |
+#          export PGPASSWORD=postgres && psql -h localhost -p 5432 -c 'CREATE DATABASE smart_home_test;' -U postgres
+#          export PGPASSWORD=postgres && psql -h localhost -p 5432 -c "CREATE USER smart_home WITH PASSWORD 'smart_home';" -U postgres
+#          export PGPASSWORD=postgres && psql -h localhost -p 5432 -c "ALTER ROLE smart_home SUPERUSER;" -U postgres
+#          export PGPASSWORD=postgres && psql -h localhost -p 5432 -c "CREATE EXTENSION pgcrypto;" -U postgres smart_home_test;
+#          export PGPASSWORD=postgres && psql -h localhost -p 5432 -c "CREATE EXTENSION Postgis;" -U postgres smart_home_test;
+#
+#      - name: Install Go ${{ matrix.go }}
+#        uses: actions/setup-go@v2
+#        with:
+#          go-version: ${{ matrix.go }}
+#
+#      - name: Prepary deps
+#        run: |
+#          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
+#          make get_deps
+#
+#      - name: Unit tests
+#        id: test-code
+#        run: make test
+#
+#      - name: System tests
+#        id: system-code
+#        run: make test_system
+#
+#      - name: Upload coverage reports to Codecov
+#        uses: codecov/codecov-action@v3
+#        env:
+#          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+  prepare:
     runs-on: ubuntu-latest
-    outputs:
-      output1: ${{ steps.artifact-upload-step.outputs.artifact-id }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Install Node ${{ matrix.node }}
-        uses: actions/setup-node@v2
+      - name: Cache
+        uses: actions/cache@v4
         with:
-          node-version: ${{ matrix.node }}
-
-      - name: Build public
-        id: build-public
-        env:
-          NODE_OPTIONS: "--max_old_space_size=4096"
-        run: make build_public
-
-      - uses: actions/upload-artifact@v4
-        id: artifact-upload-step
+          path: /tmp/.goxx-cache
+          key: ${{ runner.os }}-goxx-base-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-goxx-base-
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build base (cache only)
+        uses: docker/bake-action@v5
         with:
-          name: public_build
-          path: ./build
-          retention-days: 1
-
-      - name: Output artifact ID
-        run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
-
-  build_common:
-    name: Build common
-    runs-on: ubuntu-latest
-    outputs:
-      output1: ${{ steps.artifact-upload-step.outputs.artifact-id }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Build common
-        id: build-common
-        run: make build_common_structure
-
-      - uses: actions/upload-artifact@v4
-        id: artifact-upload-step
-        with:
-          name: common_build
-          path: ./tmp/common
-          retention-days: 1
-
-      - name: Output artifact ID
-        run: echo 'Artifact ID is ${{ steps.artifact-upload-step.outputs.artifact-id }}'
-
-  run_tests:
-    name: Run linux test
-    strategy:
-      matrix:
-        go: [ 1.23 ]
-    runs-on: ubuntu-latest
-    needs: [ build_public ]
-
-    services:
-      postgres:
-        image: postgis/postgis:11-3.3
-        env:
-          POSTGRES_DB: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_USER: postgres
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: public_build
-          path: ./build
-
-      - name: Install PostgreSQL client
-        run: |
-          sudo apt-get update
-          sudo apt-get install --yes postgresql-client
-          sudo apt-get -y install libpq-dev
-
-      - name: set up postgres
-        run: |
-          export PGPASSWORD=postgres && psql -h localhost -p 5432 -c 'CREATE DATABASE smart_home_test;' -U postgres
-          export PGPASSWORD=postgres && psql -h localhost -p 5432 -c "CREATE USER smart_home WITH PASSWORD 'smart_home';" -U postgres
-          export PGPASSWORD=postgres && psql -h localhost -p 5432 -c "ALTER ROLE smart_home SUPERUSER;" -U postgres
-          export PGPASSWORD=postgres && psql -h localhost -p 5432 -c "CREATE EXTENSION pgcrypto;" -U postgres smart_home_test;
-          export PGPASSWORD=postgres && psql -h localhost -p 5432 -c "CREATE EXTENSION Postgis;" -U postgres smart_home_test;
-
-      - name: Install Go ${{ matrix.go }}
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{ matrix.go }}
-
-      - name: Prepary deps
-        run: |
-          echo -e "machine github.com\n  login ${{ secrets.GITHUBTOKEN }}" > ~/.netrc
-          make get_deps
-
-      - name: Unit tests
-        id: test-code
-        run: make test
-
-      - name: System tests
-        id: system-code
-        run: make test_system
-
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          targets: base
+          set: |
+            *.platform=${{ env.PLATFORMS }}
+            *.cache-from=type=gha,scope=base
+            *.cache-to=type=gha,scope=base,mode=max
 
   build_artefacts:
     name: Build artefacts
     runs-on: ubuntu-latest
-    needs: [ build_public ]
+    #needs: [ build_public ]
     steps:
 
       - env:
@@ -158,41 +183,43 @@ jobs:
           name: public_build
           path: ./build
 
-      - name: Cache
-        uses: actions/cache@v4
-        with:
-          path: /tmp/.goxx-cache
-          key: ${{ runner.os }}-goxx-base-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-goxx-base-
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+#      - name: trying to build artefacts
+#        id: build-artefacts
+#        run: make build_artefacts
       - name: trying to build artefacts
-        id: build-artefacts
-        run: make build_artefacts
-
-  docker_image_test:
-    name: Test docker images
-    runs-on: ubuntu-latest
-    needs: [ build_public ]
-    steps:
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-        env:
-          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - uses: actions/download-artifact@v4
+        uses: docker/bake-action@v5
         with:
-          name: public_build
-          path: ./build
+          files: |
+            ./docker-bake.hcl
+            ${{ steps.meta.outputs.bake-file }}
+          targets: artifact-all
+          set: |
+            *.cache-from=type=gha,scope=base
+          push: ${{ startsWith(github.ref, 'refs/tags/v') }}
 
-      - name: trying to test docker image
-        run: make test_build
+#  docker_image_test:
+#    name: Test docker images
+#    runs-on: ubuntu-latest
+#    needs: [ build_public ]
+#    steps:
+#      - name: Set env
+#        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+#        env:
+#          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
+#
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#
+#      - uses: actions/download-artifact@v4
+#        with:
+#          name: public_build
+#          path: ./build
+#
+#      - name: trying to test docker image
+#        run: make test_build
