--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ on:
 env:
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  PLATFORMS: linux/amd64,linux/arm64
 
 jobs:
 #  build_public:
@@ -169,6 +170,7 @@ jobs:
     name: Build artefacts
     runs-on: ubuntu-latest
     #needs: [ build_public ]
+    needs: [ prepare ]
     steps:
 
       - env:
