--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,7 +76,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  build_artefacts:
+  build_artifacts:
     name: Build artefacts
     runs-on: ubuntu-latest
     strategy:
